font and style updates to port

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style_all_pages.css" />
     <link rel="stylesheet" href="assets/css/style_index.css" />
-  </head>
-
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Roboto:500,700&display=swap" rel="stylesheet">  </head>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400&display=swap" rel="stylesheet">  <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Ben Cooley</a>
@@ -37,7 +36,6 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="index.html">About</a>
             <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
           </div>
         </div>
       </nav>
@@ -46,19 +44,24 @@
     <div class="aboutBox box container">
       <!-- trying to make another box for the text and image section in middle of page here -->
       <box>
-        <h2 class="title">About Me</h2>
+        <h2 class="title">ABOUT ME</h2>
         <!-- <hr> -->
         <div class="profile-pic">
           <img src="assets/images/profile picture.jpeg" alt="Ben Cooley" />
         </div>
+            <div class="contacts">
+                <a class="contactPics col-xs-4" href="https://github.com/be-cool"><img id="github" src="assets/images/gh.png" alt="github"></a>     
+                <a class="contactPics col-xs-4" href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="assets/images/li.png" alt="linkedin"></a></h4>
+                <a class="contactPics col-xs-4" href="mailto:bcooley58@gmail.com"><img id="mail" src="assets/images/email.jpeg" alt="linkedin"></a></h4>
+            </div>  
         <p id="p-one">
           Welcome to my profile! My name is Ben Cooley and I am a full-stack web
           developer from Philadelphia.
         </p>
-        <p id="p-two">
-          I recently graduated from the Penn LPS Coding Bootcamp at the
+        <!-- <p id="p-two"> -->
+          <!-- I recently graduated from the Penn LPS Coding Bootcamp at the
           University of Pennsylvania where I was lucky enough to be a part of a
-          6-month full-stack web development course. The bootcamp navigated us through the front-end and back-end languages that are currently some of the most prevalent in the industry. The majorit of my focus and knowledge gained from the bootcamp was 
+          6-month full-stack web development course. The bootcamp navigated us through the front-end and back-end languages that are currently some of the most prevalent in the industry. The majorit of my focus and knowledge gained from the bootcamp was  -->
           <!-- While the course was taught -->
           <!-- predominantly in Javascript we began by navigating through basic HTML -->
           <!-- and CSS applications. Pretty quickly I found myself integrating
@@ -71,14 +74,14 @@
           full-stack course, we did not stop at the front end; I learned how to
           utilize different databases to make my applications more dynamic and
           powerful. -->
-        </p>
+        <!-- </p> -->
         <p id="p-three">
           I am a 2015 graduate from the University of Pennsylvania with a degree
           in Cognitive Science - focused in neuroscience. Since graduating, I
           have spent time working for the 76ers organization, as a financial
           representative with Northwestern Mutual, and I traveled the country as
           a caddie for a professional golfer on the PGA Web.com Tour in 2018.
-          While enrolled at the Penn Coding Bootcamp, I have also been working
+          I recently graduated from the Penn LPS Coding Bootcamp, while also working
           part-time for a real estate investment/management company in Fort
           Washington, PA called Intercontinental Development.
         </p>
@@ -87,7 +90,7 @@
     <div class="skillsBox box container">
       <!-- trying to make another box for the text and image section in middle of page here -->
       <box>
-        <h2 class="title">Skills</h2>
+        <h2 class="title">SKILLS</h2>
         <div class="meter">
           <span style="width:85%;"
             ><span class="progress"
@@ -114,11 +117,10 @@
             ></span
           >
         </div>
-        <h5 class="skills">
+        <p class="skills">
           Have created web applications with, or possess working knowledge of:
-          Node.js, Express, MySQL, JQuery, RESTful APIs, Handlebars, Firebase,
-          React Hooks
-        </h5>
+          HTML/CSS, Bootstrap, Javascript, Node.js, Express, React, MySQL, JQuery, RESTful APIs, Handlebars, Firebase
+        </p>
       </box>
     </div>
     <!-- <hr> -->
