--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style_all_pages.css">
     <link rel="stylesheet" href="assets/css/style_portfolio.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Roboto:500,700&display=swap" rel="stylesheet">    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</head>
-
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400&display=swap" rel="stylesheet">    
 <body>
 
     <div class="color">
@@ -32,7 +31,6 @@
                   <div class="navbar-nav">
                     <a class="nav-item nav-link" href="index.html">About</a>
                     <a class="nav-item nav-link active" href="portfolio.html">Portfolio</a>
-                    <a class="nav-item nav-link" href="contact.html">Contact</a>
                   </div>
                 </div>
               </nav>
@@ -41,7 +39,7 @@
 
     <div class="box container pics">
             <box>
-                <h2 class="title">Portfolio</h2>
+                <h2 class="title">PORTFOLIO</h2>
                     <div class="row">
                         <div class="col-sm-4">
                             <a href="https://quattuor.herokuapp.com/">
@@ -61,6 +59,8 @@
                                 <img class="pic" src= "assets/images/EF.png" alt= "eventFinder" style="width: 90%; margin-top: 15%;" data-toggle="tooltip" title="Web app that allows users to find events and tickets to things going on near them. Built using HTML, Firebase, Bootstrap, JQuery, Javascript and Ticketmaster/Eventful APIs"> 
                             </a>                          
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://bookapp-bc.herokuapp.com/">
                                 <!-- <h6>Google Book Search</h6> -->
@@ -79,10 +79,12 @@
                                 <img class="pic" id="train" src= "assets/images/train.jpeg" alt= "trainScheduler" data-toggle="tooltip" title="App that allows users to view and add train schedules to the page. Firebase used to store the data."> 
                             </a>                          
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/trivia-game/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img class="pic" id="train" src= "assets/images/cast.jpg" alt= "seinfeld" data-toggle="tooltip" title="Seinfeld-themed trivia game that uses HTML, CSS and Javascript for its core funtionality. Includes a timer functionality."> 
+                                <img class="pic" id="seinfeld" src= "assets/images/cast.jpg" alt= "seinfeld" data-toggle="tooltip" title="Seinfeld-themed trivia game that uses HTML, CSS and Javascript for its core funtionality. Includes a timer functionality."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
