styling update and fixed footer and images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400&display=swap" rel="stylesheet">  <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html">Ben Cooley</a>
+        <a class="navbar-brand" href="index.html">BEN COOLEY</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -47,12 +47,12 @@
         <h2 class="title">ABOUT ME</h2>
         <!-- <hr> -->
         <div class="profile-pic">
-          <img src="assets/images/profile picture.jpeg" alt="Ben Cooley" />
+          <img src="assets/images/profile picture.png" alt="Ben Cooley" />
         </div>
             <div class="contacts">
                 <a class="contactPics col-xs-4" href="https://github.com/be-cool"><img id="github" src="assets/images/gh.png" alt="github"></a>     
                 <a class="contactPics col-xs-4" href="https://www.linkedin.com/in/ben-cooley-238171116/"><img id="linkedin" src="assets/images/li.png" alt="linkedin"></a></h4>
-                <a class="contactPics col-xs-4" href="mailto:bcooley58@gmail.com"><img id="mail" src="assets/images/email.jpeg" alt="linkedin"></a></h4>
+                <a class="contactPics col-xs-4" href="mailto:bcooley58@gmail.com"><img id="mail" src="assets/images/email.png" alt="linkedin"></a></h4>
             </div>  
         <p id="p-one">
           Welcome to my profile! My name is Ben Cooley and I am a full-stack web
