--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <h3>Ben Cooley</h3>
             </box> -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="index.html">Ben Cooley</a>
+                <a class="navbar-brand" href="index.html">BEN COOLEY</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -64,7 +64,7 @@
                         <div class="col-sm-4">
                             <a href="https://bookapp-bc.herokuapp.com/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img class="pic" id="gbooks" src= "assets/images/gBooks.jpeg" alt= "googleBooks" data-toggle="tooltip" title="MERN stack web app that allows users to search for, see information about and save books from Google Books. CSS is pure CSS."> 
+                                <img class="pic" id="gbooks" src= "assets/images/gBooks.png" alt= "googleBooks" data-toggle="tooltip" title="MERN stack web app that allows users to search for, see information about and save books from Google Books. CSS is pure CSS."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
@@ -84,7 +84,7 @@
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/trivia-game/">
                                 <!-- <h6>Google Book Search</h6> -->
-                                <img class="pic" id="seinfeld" src= "assets/images/cast.jpg" alt= "seinfeld" data-toggle="tooltip" title="Seinfeld-themed trivia game that uses HTML, CSS and Javascript for its core funtionality. Includes a timer functionality."> 
+                                <img class="pic" id="seinfeld" src= "assets/images/cast.png" alt= "seinfeld" data-toggle="tooltip" title="Seinfeld-themed trivia game that uses HTML, CSS and Javascript for its core funtionality. Includes a timer functionality."> 
                             </a>                          
                         </div>
                         <div class="col-sm-4">
@@ -96,7 +96,7 @@
                         <div class="col-sm-4">
                             <a href="https://bc-burger-app.herokuapp.com/">
                                     <!-- <h6>Train Scheduler</h6> -->
-                                <img class="pic" id="burger" src= "assets/images/cheeseburger.jpg" alt= "burger" data-toggle="tooltip" title='MERN stack web app that allows users to create different types of burgers to be added to the "menu" that can subsequently be "devoured" by other user'> 
+                                <img class="pic" id="burger" src= "assets/images/cheeseburger.png" alt= "burger" data-toggle="tooltip" title='MERN stack web app that allows users to create different types of burgers to be added to the "menu" that can subsequently be "devoured" by other user'> 
                             </a>                          
                         </div>
                     </div>
