--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,8 @@
     <div class="box container pics">
             <box>
                 <h2 class="title">PORTFOLIO</h2>
-                    <div class="row">
+                <p class="instructions">Hover over any image to learn more about the app.</p>
+                    <div class="row first">
                         <div class="col-sm-4">
                             <a href="https://quattuor.herokuapp.com/">
                                 <!-- <h6>Quattuor</h6> -->
@@ -60,7 +61,7 @@
                             </a>                          
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row rest">
                         <div class="col-sm-4">
                             <a href="https://bookapp-bc.herokuapp.com/">
                                 <!-- <h6>Google Book Search</h6> -->
@@ -80,7 +81,7 @@
                             </a>                          
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row bottom">
                         <div class="col-sm-4">
                             <a href="https://be-cool.github.io/trivia-game/">
                                 <!-- <h6>Google Book Search</h6> -->
