profile wording update

--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
           powerful. -->
         <!-- </p> -->
         <p id="p-three">
-          I am a 2015 graduate from the University of Pennsylvania with a degree
-          in Cognitive Science - focused in neuroscience. Since graduating, I
-          have spent time working for the 76ers organization, as a financial
-          representative with Northwestern Mutual, and I traveled the country as
+          I am a 2015 graduate of the University of Pennsylvania with a degree
+          in Cognitive Science - focused in Neuroscience. Since graduating, I
+          have spent time competing in regional and national amateur golf tournaments 
+          (including the United States Amateur Championship) working for the 76ers organization, 
+          serving as a financial representative with Northwestern Mutual, and traveling the country as
           a caddie for a professional golfer on the PGA Web.com Tour in 2018.
           I recently graduated from the Penn LPS Coding Bootcamp, while also working
-          part-time for a real estate investment/management company in Fort
-          Washington, PA called Intercontinental Development.
+          part-time for a Intercontinental Development, a real estate investment/management 
+          company in Fort Washington, PA.
         </p>
       </box>
     </div>
