added tag manager at top of head

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-150575121-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-150575121-1');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -16,7 +25,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style_all_pages.css" />
     <link rel="stylesheet" href="assets/css/style_index.css" />
-    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Roboto:500,700&display=swap" rel="stylesheet">  </head>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:500|Roboto:500,700&display=swap" rel="stylesheet">  
+  </head>
     <link href="https://fonts.googleapis.com/css?family=Merriweather:400&display=swap" rel="stylesheet">  <body>
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
