--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
 <script>
 
     /*grab all links with jQuery selector*/
-allLinks = $('img');
+allLinks = $('a');
 
 /* handle and set information for console.log and passing event to GA*/
 tagLink = function (link) {
